--- a/Remote/src/main/res/layout/activity_sony.xml
+++ b/Remote/src/main/res/layout/activity_sony.xml
@@ -7,5 +7,5 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:defaultNavHost="true"
-    app:navGraph="@navigation/nav_graph"
+    app:navGraph="@navigation/sony_nav_graph"
     tools:context=".brands.sony.container.SonyActivity" />
