--- a/Apps/src/main/res/values/themes.xml
+++ b/Apps/src/main/res/values/themes.xml
@@ -37,4 +37,11 @@
         <item name="fontFamily">@font/titan_one_regular</item>
         <item name="android:textStyle">bold</item>
     </style>
+    
+    <style name="FullScreen" parent="Theme.AndroidOpenSourceProjects">
+        <item name="android:windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+    </style>
 </resources>
