--- a/Apps/src/main/res/layout/fragment_radar_chart.xml
+++ b/Apps/src/main/res/layout/fragment_radar_chart.xml
@@ -1,14 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.github.mikephil.charting.charts.RadarChart xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/radarChart"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Radar Chart"
-        android:textSize="32sp"
-        android:textStyle="bold" />
-
-</FrameLayout>
+    android:layout_height="match_parent" />
