--- a/Remote/src/main/res/layout/activity_sony.xml
+++ b/Remote/src/main/res/layout/activity_sony.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".brands.sony.container.SonyActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:padding="8dp">
 
         <TextView
@@ -86,7 +87,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="Volume Up"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@id/buttonSetIpAndPSK"
             app:layout_constraintTop_toBottomOf="@id/buttonPowerOn"
             tools:ignore="HardcodedText" />
 
@@ -96,8 +97,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="Volume Down"
-            app:layout_constraintStart_toEndOf="@id/buttonVolumeUp"
-            app:layout_constraintTop_toBottomOf="@id/buttonPowerOn"
+            app:layout_constraintEnd_toEndOf="@id/buttonSetIpAndPSK"
+            app:layout_constraintTop_toBottomOf="@id/buttonPowerOff"
             tools:ignore="HardcodedText" />
 
         <androidx.appcompat.widget.AppCompatButton
@@ -106,9 +107,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="Mute"
-            app:layout_constraintEnd_toStartOf="@id/buttonUnMute"
-            app:layout_constraintStart_toEndOf="@id/buttonVolumeDown"
-            app:layout_constraintTop_toBottomOf="@id/buttonPowerOff"
+            app:layout_constraintStart_toStartOf="@id/buttonSetIpAndPSK"
+            app:layout_constraintTop_toBottomOf="@id/buttonVolumeUp"
             tools:ignore="HardcodedText" />
 
         <androidx.appcompat.widget.AppCompatButton
@@ -117,98 +117,107 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="UnMute"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/buttonPowerOff"
+            app:layout_constraintEnd_toEndOf="@id/buttonSetIpAndPSK"
+            app:layout_constraintTop_toBottomOf="@id/buttonVolumeDown"
             tools:ignore="HardcodedText" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/button1"
-            android:layout_width="44dp"
-            android:layout_height="44dp"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:layout_marginHorizontal="8dp"
             android:layout_marginTop="8dp"
             android:text="1"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/buttonVolumeUp"
+            app:layout_constraintStart_toStartOf="@id/buttonMute"
+            app:layout_constraintTop_toBottomOf="@id/buttonMute"
             tools:ignore="HardcodedText" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/button2"
-            android:layout_width="44dp"
-            android:layout_height="44dp"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:layout_marginHorizontal="8dp"
             android:layout_marginTop="8dp"
             android:text="2"
             app:layout_constraintStart_toEndOf="@id/button1"
-            app:layout_constraintTop_toBottomOf="@id/buttonVolumeUp"
+            app:layout_constraintTop_toBottomOf="@id/buttonMute"
             tools:ignore="HardcodedText" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/button3"
-            android:layout_width="44dp"
-            android:layout_height="44dp"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:layout_marginHorizontal="8dp"
             android:layout_marginTop="8dp"
             android:text="3"
             app:layout_constraintStart_toEndOf="@id/button2"
-            app:layout_constraintTop_toBottomOf="@id/buttonVolumeUp"
+            app:layout_constraintTop_toBottomOf="@id/buttonMute"
             tools:ignore="HardcodedText" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/button4"
-            android:layout_width="44dp"
-            android:layout_height="44dp"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:layout_marginHorizontal="8dp"
             android:layout_marginTop="8dp"
             android:text="4"
             app:layout_constraintStart_toEndOf="@id/button3"
-            app:layout_constraintTop_toBottomOf="@id/buttonVolumeDown"
+            app:layout_constraintTop_toBottomOf="@id/buttonMute"
             tools:ignore="HardcodedText" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/button5"
-            android:layout_width="44dp"
-            android:layout_height="44dp"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:layout_marginHorizontal="8dp"
             android:layout_marginTop="8dp"
             android:text="5"
             app:layout_constraintStart_toEndOf="@id/button4"
-            app:layout_constraintTop_toBottomOf="@id/buttonVolumeDown"
+            app:layout_constraintTop_toBottomOf="@id/buttonUnMute"
             tools:ignore="HardcodedText" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/button6"
-            android:layout_width="44dp"
-            android:layout_height="44dp"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:layout_marginHorizontal="8dp"
             android:layout_marginTop="8dp"
             android:text="6"
-            app:layout_constraintStart_toEndOf="@id/button5"
-            app:layout_constraintTop_toBottomOf="@id/buttonVolumeDown"
+            app:layout_constraintStart_toEndOf="@id/button1"
+            app:layout_constraintTop_toBottomOf="@id/button1"
             tools:ignore="HardcodedText" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/button7"
-            android:layout_width="44dp"
-            android:layout_height="44dp"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:layout_marginHorizontal="8dp"
             android:layout_marginTop="8dp"
             android:text="7"
-            app:layout_constraintStart_toEndOf="@id/button6"
-            app:layout_constraintTop_toBottomOf="@id/buttonMute"
+            app:layout_constraintStart_toEndOf="@id/button2"
+            app:layout_constraintTop_toBottomOf="@id/button2"
             tools:ignore="HardcodedText" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/button8"
-            android:layout_width="44dp"
-            android:layout_height="44dp"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:layout_marginHorizontal="8dp"
             android:layout_marginTop="8dp"
             android:text="8"
-            app:layout_constraintStart_toEndOf="@id/button7"
-            app:layout_constraintTop_toBottomOf="@id/buttonMute"
+            app:layout_constraintStart_toEndOf="@id/button3"
+            app:layout_constraintTop_toBottomOf="@id/button3"
             tools:ignore="HardcodedText" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/button9"
-            android:layout_width="44dp"
-            android:layout_height="44dp"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:layout_marginHorizontal="8dp"
             android:layout_marginTop="8dp"
             android:text="9"
-            app:layout_constraintStart_toEndOf="@id/button8"
-            app:layout_constraintTop_toBottomOf="@id/buttonUnMute"
+            app:layout_constraintStart_toEndOf="@id/button4"
+            app:layout_constraintTop_toBottomOf="@id/button4"
             tools:ignore="HardcodedText" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
