--- a/Apps/src/main/res/navigation/nav_graph.xml
+++ b/Apps/src/main/res/navigation/nav_graph.xml
@@ -12,6 +12,14 @@
         tools:layout="@layout/fragment_apps_menu">
 
         <action
+            android:id="@+id/action_from_appsMenu_to_camera"
+            app:destination="@id/cameraFragment" />
+
+        <action
+            android:id="@+id/action_from_appsMenu_to_stepCounter"
+            app:destination="@id/stepCounterFragment" />
+
+        <action
             android:id="@+id/action_from_appsMenu_to_soundCategories"
             app:destination="@id/soundCategoriesFragment" />
 
@@ -41,7 +49,7 @@
 
         <action
             android:id="@+id/action_from_appsMenu_to_wallpaper"
-            app:destination="@id/wallpaperFragment"/>
+            app:destination="@id/wallpaperFragment" />
 
         <action
             android:id="@+id/action_from_appsMenu_to_charts"
@@ -51,6 +59,19 @@
             android:id="@+id/action_from_appsMenu_to_videoShorts"
             app:destination="@id/videoShortsFragment" />
     </fragment>
+
+    <fragment
+        android:id="@+id/cameraFragment"
+        android:name="com.android.apps.appCamera.CameraFragment"
+        android:label="CameraFragment"
+        tools:layout="@layout/fragment_camera" />
+
+    <fragment
+        android:id="@+id/stepCounterFragment"
+        android:name="com.android.apps.appStepCounter.StepCounterFragment"
+        android:label="StepCounterFragment"
+        tools:layout="@layout/fragment_step_counter" />
+
     <!-- ______________________________appPrankSound start______________________________________-->
     <fragment
         android:id="@+id/soundCategoriesFragment"
